created expanded tasks headings

--- a/cheesecakefactory/assets/tasks.json
+++ b/cheesecakefactory/assets/tasks.json
@@ -19,5 +19,68 @@
     "priority": "low",
     "timeline": "2025-03-10",
     "completed": false
+  },
+  {
+    "id": 4,
+    "name": "without complete usually goose",
+    "priority": "high",
+    "timeline": "2025-03-01",
+    "completed": false
+  },
+  {
+    "id": 5,
+    "name": "sign smell",
+    "priority": "medium",
+    "timeline": "2025-03-05",
+    "completed": false
+  },
+  {
+    "id": 6,
+    "name": "remember off me cut package gray men yesterday",
+    "priority": "low",
+    "timeline": "2025-03-10",
+    "completed": false
+  },
+  {
+    "id": 7,
+    "name": "strip bean think say circle identity",
+    "priority": "high",
+    "timeline": "2025-03-01",
+    "completed": false
+  },
+  {
+    "id": 8,
+    "name": "castle some aboard along shown tax bill former many also sea construction",
+    "priority": "medium",
+    "timeline": "2025-03-05",
+    "completed": false
+  },
+  {
+    "id": 9,
+    "name": "bound six sister",
+    "priority": "low",
+    "timeline": "2025-03-10",
+    "completed": false
+  },
+  {
+    "id": 10,
+    "name": "view mice wide charge thread hole nature laid animal six",
+    "priority": "high",
+    "timeline": "2025-03-01",
+    "completed": false
+  },
+  {
+    "id": 11,
+    "name": "tape conversation eager",
+    "priority": "medium",
+    "timeline": "2025-03-05",
+    "completed": false
+  },
+  {
+    "id": 12,
+    "name": "dried gave gravity",
+    "priority": "low",
+    "timeline": "2025-03-10",
+    "completed": false
   }
 ]
