--- a/cheesecakefactory/pubspec.yaml
+++ b/cheesecakefactory/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   sqflite: ^2.0.0+4
   path_provider: ^2.0.9
 
+  table_calendar: ^3.0.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
