--- a/cheesecakefactory/pubspec.yaml
+++ b/cheesecakefactory/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   speech_to_text: ^7.0.0
   sqflite: ^2.0.0+4
   path_provider: ^2.0.9
-
+  path: ^1.8.0
   table_calendar: ^3.0.2
 
 dev_dependencies:
