--- a/cheesecakefactory/pubspec.yaml
+++ b/cheesecakefactory/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   provider: ^6.1.2
   crypto: ^3.0.6
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
