--- a/cheesecakefactory/pubspec.yaml
+++ b/cheesecakefactory/pubspec.yaml
@@ -39,6 +39,7 @@ flutter:
     - assets/images/
     - assets/cat.gif
     - assets/fan.mp3
+    - assets/logo.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
