--- a/cheesecakefactory/pubspec.yaml
+++ b/cheesecakefactory/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   timezone: ^0.10.0
   google_nav_bar: ^5.0.7
+  table_calendar: ^3.0.8
+  speech_to_text: ^7.0.0
 
 dev_dependencies:
   flutter_test:
