updated stylistic changes

--- a/cheesecakefactory/pubspec.yaml
+++ b/cheesecakefactory/pubspec.yaml
@@ -40,6 +40,7 @@ flutter:
     - assets/cat.gif
     - assets/fan.mp3
     - assets/logo.png
+    - assets/cheesecake.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
