--- a/cheesecakefactory/android/app/build.gradle
+++ b/cheesecakefactory/android/app/build.gradle
@@ -1,3 +1,145 @@
+// // // plugins {
+// // //     id "com.android.application"
+// // //     id "kotlin-android"
+// // //     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
+// // //     id "dev.flutter.flutter-gradle-plugin"
+// // // }
+
+// // // android {
+// // //     namespace = "com.example.cheesecakefactory"
+// // //     compileSdk = flutter.compileSdkVersion
+// // //     // ndkVersion = flutter.ndkVersion
+// // //     ndkVersion = "25.1.8937393"
+// // //     compileOptions {
+// // //         sourceCompatibility = JavaVersion.gVERSION_1_8
+// // //         targetCompatibility = JavaVersion.VERSION_1_8
+// // //         coreLibraryDesugaringEnabled true
+// // //     }
+
+// // //     kotlinOptions {
+// // //         jvmTarget = JavaVersion.VERSION_1_8
+// // //     }
+
+// // //     defaultConfig {
+// // //         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
+// // //         applicationId = "com.example.cheesecakefactory"
+// // //         // You can update the following values to match your application needs.
+// // //         // For more information, see: https://flutter.dev/to/review-gradle-config.
+// // //         minSdk = flutter.minSdkVersion
+// // //         targetSdk = flutter.targetSdkVersion
+// // //         versionCode = flutter.versionCode
+// // //         versionName = flutter.versionName
+// // //     }
+
+// // //     buildTypes {
+// // //         release {
+// // //             // TODO: Add your own signing config for the release build.
+// // //             // Signing with the debug keys for now, so `flutter run --release` works.
+// // //             signingConfig = signingConfigs.debug
+// // //         }
+// // //     }
+// // // }
+// // // dependencies {
+// // //     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+// // //     // Other dependencies for your project
+// // //     // Add the desugar dependency:
+// // //     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+// // // }
+
+// // // flutter {
+// // //     source = "../.."
+// // // }
+// // // File: android/app/build.gradle
+
+// // apply plugin: 'com.android.application'
+// // apply plugin: 'kotlin-android'
+
+// // android {
+// //     compileSdkVersion 33
+
+// //     ndkVersion "25.1.8937393"
+
+// //     defaultConfig {
+// //         applicationId "com.example.yourapp"  // Change to your app's id
+// //         minSdkVersion 21
+// //         targetSdkVersion 33
+// //         versionCode 1
+// //         versionName "1.0"
+// //         multiDexEnabled true
+// //     }
+
+// //     compileOptions {
+// //         sourceCompatibility JavaVersion.VERSION_1_8
+// //         targetCompatibility JavaVersion.VERSION_1_8
+// //         // Enable core library desugaring
+// //         coreLibraryDesugaringEnabled true
+// //     }
+
+// //     kotlinOptions {
+// //         jvmTarget = "1.8"
+// //     }
+// // }
+
+// // dependencies {
+// //     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+// //     // Other dependencies for your project
+// //     // Add the desugar dependency:
+// //     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+// // }
+
+// plugins {
+//     id "com.android.application"
+//     id "kotlin-android"
+//     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
+//     id "dev.flutter.flutter-gradle-plugin"
+// }
+
+// android {
+//     namespace = "com.example.cheesecakefactory"
+//     compileSdk = flutter.compileSdkVersion
+//     // ndkVersion = flutter.ndkVersion
+//     ndkVersion = "25.1.8937393"
+//     compileOptions {
+//         sourceCompatibility = JavaVersion.VERSION_1_8
+//         targetCompatibility = JavaVersion.VERSION_1_8
+//         coreLibraryDesugaringEnabled true
+//     }
+
+//     kotlinOptions {
+//         jvmTarget = "1.8"
+//     }
+
+//     defaultConfig {
+//         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
+//         applicationId = "com.example.cheesecakefactory"
+//         // You can update the following values to match your application needs.
+//         // For more information, see: https://flutter.dev/to/review-gradle-config.
+//         minSdk = flutter.minSdkVersion
+//         targetSdk = flutter.targetSdkVersion
+//         versionCode = flutter.versionCode
+//         versionName = flutter.versionName
+//     }
+
+//     buildTypes {
+//         release {
+//             // TODO: Add your own signing config for the release build.
+//             // Signing with the debug keys for now, so `flutter run --release` works.
+//             signingConfig = signingConfigs.debug
+//         }
+//     }
+// }
+
+// dependencies {
+//     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+//     // Other dependencies for your project
+//     // Add the desugar dependency:
+//     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+// }
+
+// flutter {
+//     source = "../.."
+// }
+
 plugins {
     id "com.android.application"
     id "kotlin-android"
@@ -5,38 +147,41 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
+// Define the Kotlin version here
+def kotlin_version = '1.6.10'
+
 android {
     namespace = "com.example.cheesecakefactory"
     compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
-
+    ndkVersion = "25.1.8937393"
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
+        coreLibraryDesugaringEnabled true
     }
-
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget = "1.8"
     }
-
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
+        // TODO: Specify your own unique Application ID.
         applicationId = "com.example.cheesecakefactory"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
-
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
+            // Signing with the debug keys for now.
             signingConfig = signingConfigs.debug
         }
     }
+}
+
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    // Add the desugar dependency:
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
 }
 
 flutter {
