--- a/cheesecakefactory/android/app/src/main/AndroidManifest.xml
+++ b/cheesecakefactory/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     <!-- Add this permission for vibration support -->
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/> 
     <application
         android:enableOnBackInvokedCallback="true"
         android:label="cheesecakefactory"
